--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
   </head>
 <!--   Body SEction -->
   <body>
+<!--     here the heading is added to the page  -->
     <h1 clas="heading">Ninja's Todos</h1>
-    
+<!--     container of the whole todo's list is contains all the elements  -->
     <div id="container"> 
       <span id="input-placeholder-icon">
         <i class="fa fa-list" aria-hidden="true"></i>
       </span>
+<!--       Input section of the todo's list where we can append the list into the menu  -->
       <input
         placeholder="Add a task"
         class="add-task"
         id="add"
         data-helloWord="asdasdas"
       />
+<!--       Label of the total tasks calculator and the complete all the tasks  -->
       <span id="total-tasks"
         >Total tasks: <span id="tasks-counter">0</span></span
       >
